# verify

./: .gitignore  .ubs-gate-summary.json  AGENTS.md  Cargo.toml  LICENSE  README.md
.beads/: issues.jsonl
.github/workflows/: ci.yml  release.yml
agent_ergonomics_audit/: .gitignore  README.md
agent_ergonomics_audit/audit/: HANDOFF.md  agent_surfaces.jsonl  ambition_bar_check.md  applied_changes.jsonl  intent_inference_corpus.jsonl  manifest.json  phase0_cli.json  phase0_skill_inventory.json  playbook.md  recommendations.jsonl  regression_alerts.md  scorecard_pass_1.md  surface_inventory.jsonl  uplift_diff.md
agent_ergonomics_audit/audit/regression_tests/: R-001__top_level_robot_triage.test.sh  R-002__top_level_capabilities_json.test.sh  R-003__top_level_robot_docs_guide.test.sh  R-004__bare_root_guidance.test.sh  R-005__help_describes_agent_surfaces.test.sh
crates/verify-cli/: Cargo.toml
crates/verify-cli/src/: doctor.rs  main.rs  paths.rs  run.rs  validate.rs  witness.rs
crates/verify-cli/src/compile/: mod.rs  portable.rs  query.rs
crates/verify-cli/src/render/: human.rs  json.rs  mod.rs
crates/verify-core/: Cargo.toml
crates/verify-core/src/: constraint.rs  lib.rs  order.rs  refusal.rs  report.rs
crates/verify-duckdb/: Cargo.toml
crates/verify-duckdb/src/: bindings.rs  lib.rs  lock_check.rs  query_rules.rs
crates/verify-engine/: Cargo.toml
crates/verify-engine/src/: embedded.rs  lib.rs  portable_relation.rs  portable_row.rs  summary.rs
docs/: PLAN_VERIFY.md  plan.md
fixtures/artifacts/: benchmark_low.json  rvl_no_real_change.json  rvl_real_change.json  rvl_refusal_diffuse.json  rvl_refusal_missingness_tolerable.json  shape_compatible.json  shape_incompatible_partial.json  verify_fail.json  verify_pass.json
fixtures/authoring/arity1/: not_null_loans.yaml
fixtures/authoring/arity_n/: foreign_key_property_tenants.yaml
fixtures/authoring/predicate_grammar/: blank_or_member.yaml
fixtures/authoring/query_rules/: orphan_rows.sql
fixtures/authoring/refusals/: missing_binding.yaml
fixtures/constraints/arity1/: not_null_loans.verify.json
fixtures/constraints/arity_n/: foreign_key_property_tenants.verify.json
fixtures/constraints/query_rules/: orphan_rows.verify.json
fixtures/golden/: block.json  escalate.json  proceed.json  proceed_with_risk.json
fixtures/inputs/arity1/: loans.csv  loans_missing_id.csv
fixtures/inputs/arity_n/: property.csv  property_no_orphans.csv  tenants.csv
fixtures/inputs/batch_missingness/: strings.csv
fixtures/locks/arity1/: loans.lock.json
fixtures/policies/: loan_tape_monthly_v1.yaml  minimal_default_only.yaml
fixtures/reports/fail/: arity1_not_null.fail.json
fixtures/reports/pass/: arity1_not_null.pass.json  orphan_rows.pass.json
fixtures/reports/query_localization/: orphan_rows.fail.json
fixtures/reports/refusal/: bad_authoring.refusal.json
schemas/: verify.constraint.v1.schema.json  verify.report.v1.schema.json
scripts/: ubs_gate.sh
tests/: cli.rs  determinism.rs  doctor.rs  embedding_equivalence.rs  gen_fixtures.rs  lock_integration.rs  perf_smoke.rs  portable_rules.rs  query_rules.rs  refusals.rs  schema_contract.rs
tests/support/: mod.rs
