[package]
name = "verify-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Core protocol types for verify"

[[test]]
name = "schema_contract"
path = "../../tests/schema_contract.rs"

[dependencies]
serde.workspace = true
serde_json.workspace = true
