[package]
name = "verify-engine"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Portable and embedded execution surface for verify"

[[test]]
name = "embedding_equivalence"
path = "../../tests/embedding_equivalence.rs"

[dependencies]
serde_json.workspace = true
verify-core = { path = "../verify-core" }
